fix(side-nav): prevent nav item shift on panel toggle

--- a/packages/react/src/components/UIShell/components/styles/_side-nav.scss
+++ b/packages/react/src/components/UIShell/components/styles/_side-nav.scss
@@ -69,6 +69,11 @@ div:has(.#{$prefix}--header)
   z-index: 7999; /* needs to be below header */
   overflow: visible;
 
+  .#{$prefix}--side-nav__items {
+    display: flex;
+    flex-direction: column;
+  }
+
   .#{$prefix}--side-nav__items,
   .#{$prefix}--side-nav__items:hover {
     overflow: visible;
